Added events to listen to when an item has been selected or deselected.

--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -764,6 +764,10 @@ label {
     background-color: #333;
     color: #F9FEF9; }
 
+.triggered {
+  display: none;
+  padding: 0 10px; }
+
 section {
   margin-top: 50px; }
 
