Added a new test for multiselects specifically for filter. Added a new method to easily clear all lists

--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -784,7 +784,10 @@ section {
     padding-top: 30px; }
 
 .multi-select {
-  width: 23.07692%; }
+  width: 23.07692%;
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 20px; }
 
 .fake-select {
   height: 33px;
