--- a/dev/css/sass/_plugin.scss
+++ b/dev/css/sass/_plugin.scss
@@ -25,7 +25,7 @@ section { margin-top: 50px; }
 .ingress { width: w(8, 0); }
 .signature { width: w(6, 0); margin: 250px auto 0; text-align: center; display: block; border-top: 1px solid #ccc;
 	svg { padding-top: 30px; } }
-.multi-select { width: w(3) }
+.multi-select { width: w(3); display: inline-block; vertical-align: top; margin-right: 20px; }
 
 //Fake Select Styling
 .fake-select { height: 33px; line-height: 33px; background-color: #fff; border: 1px solid $lgrey;
