--- a/dev/css/rekaf.css
+++ b/dev/css/rekaf.css
@@ -1,11 +1,16 @@
-.fake-select {
+.rekaf {
   position: relative;
   cursor: pointer;
   text-align: left;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
-  .fake-select > .title {
+  .rekaf a, .rekaf label {
+    display: block; }
+  .rekaf .disabled {
+    opacity: 0.3;
+    cursor: default; }
+  .rekaf-title {
     display: block;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -14,26 +19,18 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none; }
-  .fake-select a, .fake-select label {
+  .rekaf-list {
+    position: absolute;
+    display: none;
+    left: 0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    background-color: white;
+    width: 100%; }
+  .rekaf--multiSelect .rekaf-title {
+    white-space: normal; }
+  .no-js .rekaf:hover .rekaf-list {
     display: block; }
-  .fake-select .disabled {
-    opacity: 0.3;
-    cursor: default; }
-
-.multi-select > .title {
-  white-space: normal; }
-
-.fake-select-list {
-  position: absolute;
-  display: none;
-  left: 0;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  background-color: white;
-  width: 100%; }
-
-.no-js .fake-select:hover .fake-select-list {
-  display: block; }
 
 /*# sourceMappingURL=main.css.map */
