--- a/dev/css/sass/_plugin.scss
+++ b/dev/css/sass/_plugin.scss
@@ -25,12 +25,11 @@ section { margin-top: 50px; }
 .ingress { width: w(8, 0); }
 .signature { width: w(6, 0); margin: 250px auto 0; text-align: center; display: block; border-top: 1px solid #ccc;
 	svg { padding-top: 30px; } }
-.multi-select { width: w(3); display: inline-block; vertical-align: top; margin-right: 20px; }
 
 //Fake Select Styling
-.fake-select { height: 33px; line-height: 33px; background-color: #fff; border: 1px solid $lgrey;
+.rekaf { height: 33px; line-height: 33px; background-color: #fff; border: 1px solid $lgrey;
 	&:after { content: ""; border: 10px solid transparent; border-top-color: #333; position: absolute; z-index: 10; right: 10px; top: 50%; margin-top: -5px; }
-	> .title { padding: 0 10px; position: relative; z-index: 11; }
+	&-title { padding: 0 10px; position: relative; z-index: 11; }
 	ul { background-color: #fff; width: 100%; border: 1px solid $lgrey; padding: 5px 0; left: -1px; top: 33px; }
 	li { padding: 0 10px;
 		&.selected a { padding-left: 20px; position: relative;
@@ -47,4 +46,5 @@ section { margin-top: 50px; }
 	&--html {
 		li.selected a:before { display: none; }
 	}
+	&--multiSelect { width: w(3); display: inline-block; vertical-align: top; margin-right: 20px; }
 }
